# wxCalculator

./: .clang-format  CMakeLists.txt  LICENSE  calculator.cpp  calculator.cpp~  calculator.h  custom-button.cpp  custom-button.h  main.cpp  main.h  panels.cpp  panels.h  wx.rc
.cache/clangd/index/: button.cpp.54839C41C329CC12.idx  button.h.C5D705D19FB62EB6.idx  calculator.cpp.C6EF918A8293431B.idx  calculator.cpp.E293630CA48E624B.idx  calculator.h.04E8E5DDAF6C252C.idx  calculator.h.9C8D9E717D293EE2.idx  custom-button.cpp.157CB9D3BACB0F2F.idx  custom-button.cpp.C18FDB4C5DCE7110.idx  custom-button.h.0046CDB181ABAB93.idx  custom-button.h.BA61FF43E61A2D76.idx  main.cpp.03CFA2404B1BDAFC.idx  main.cpp.D734C0D51828D393.idx  main.h.97BCF86984C7C5C9.idx  main.h.EA8AACF70A2F2D04.idx  panels.cpp.82675FA6701658F4.idx  panels.cpp.A7A1C1BBDE09D519.idx  panels.h.618D7276C5AA3AAE.idx  panels.h.C6532250DD98C519.idx
.github/workflows/: cmake-single-platform.yml
